src/tests/Loader/classloader/generics/Instantiation/Negative/Type_ofT_Inherit_FromT.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <!-- Types are so invalid they crash Roslyn -->
    <RequiresProcessIsolation>true</RequiresProcessIsolation>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="Type_ofT_Inherit_FromT.il" />
  </ItemGroup>
</Project>
